--- a/index.html
+++ b/index.html
@@ -2066,26 +2066,69 @@
                if (detailsDiv.classList.contains('hidden')) {
                    // Показать детализацию выручки
                    detailsDiv.innerHTML = ''; // Очистить
-                   const revenueByDay = {}; // { 'YYYY-MM-DD': amount }
+                   // --- Пересчитываем выручку по дням напрямую из bookings --- 
+                   const revenueByDay = {}; 
+                   const year = salaryViewMonth.getFullYear();
+                   const month = salaryViewMonth.getMonth();
+                   const yearMonthStr = `${year}-${(month + 1).toString().padStart(2, '0')}`;
 
-                   // Собираем выручку по дням (используем уже посчитанные детали ЗП, т.к. там есть revenue)
-                   Object.values(salaryData).forEach(adminData => {
-                       adminData.details.forEach(detail => {
-                           if (!revenueByDay[detail.date]) {
-                               revenueByDay[detail.date] = 0;
+                   bookings.forEach(booking => {
+                       if (typeof booking.bookingDate === 'string' && booking.bookingDate.startsWith(yearMonthStr)) {
+                           const dateStr = booking.bookingDate;
+                           if (!revenueByDay[dateStr]) {
+                               revenueByDay[dateStr] = 0;
                            }
-                           // Суммируем только если это основной админ, чтобы не дублировать выручку
-                           // Или если у этого дня не было основного админа (но был помощник? Спорный кейс, но пока так)
-                           const assignment = adminAssignments.find(a => a.date === detail.date);
-                           if (assignment && assignment.mainAdminId === adminData.id) {
-                               revenueByDay[detail.date] += detail.revenue;
-                           } else if (assignment && !assignment.mainAdminId && assignment.helperAdminId === adminData.id) {
-                               // Если нет основного, но есть помощник - добавим его выручку
-                               revenueByDay[detail.date] += detail.revenue;
+
+                           // Расчет итоговой суммы бронирования ПОСЛЕ скидки (аналогично calculateRevenueStats)
+                           const duration = parseFloat(booking.duration) || 0;
+                           let bookingTotalAmount = 0;
+                           if (booking.selectedServices && Array.isArray(booking.selectedServices)) {
+                               booking.selectedServices.forEach(service => {
+                                  if (service === 'birthday') { 
+                                    const fullHours = Math.floor(duration);
+                                    const hasHalfHour = duration % 1 !== 0;
+                                    let birthdayTotal = 0;
+                                    for (let hour = 1; hour <= fullHours; hour++) {
+                                      const hourPrice = servicePrices.birthday[hour] || servicePrices.birthday[4] || 3000;
+                                      birthdayTotal += hourPrice;
+                                    }
+                                    if (hasHalfHour) {
+                                       if (fullHours === 0) { birthdayTotal += 2000; }
+                                       else if (fullHours === 1) { birthdayTotal += 2000; }
+                                       else { birthdayTotal += (servicePrices.birthday[3] || 3000) / 2; }
+                                    }
+                                    bookingTotalAmount += birthdayTotal;
+                                  } else { 
+                                    const price = servicePrices[service] || 0;
+                                    bookingTotalAmount += price * duration;
+                                  }
+                               });
+                           } else if (booking.serviceType) { // Обратная совместимость
+                                console.warn('Using legacy serviceType for revenue details calculation (calculating pre-discount amount)', booking);
+                                if (booking.serviceType === 'birthday') {
+                                    const hours = Math.min(Math.max(Math.ceil(duration), 1), 12);
+                                    bookingTotalAmount = servicePrices.birthday[hours] || servicePrices.birthday[4];
+                                } else if (duration === 0.5 && servicePriceHalfHour[booking.serviceType]) {
+                                    bookingTotalAmount = servicePriceHalfHour[booking.serviceType] || 0;
+                                } else {
+                                    const pricePerHour = servicePrices[booking.serviceType] || 0;
+                                    bookingTotalAmount = pricePerHour * duration;
+                                }
                            }
-                            // Альтернативно, можно пересчитать выручку заново из bookings, если salaryData неполный
-                       });
+
+                           const discountPercent = booking.discountPercent || 0;
+                           const discountAmount = booking.discountAmount || 0;
+                           let finalBookingAmount = bookingTotalAmount;
+                           if (discountPercent > 0) {
+                             finalBookingAmount = bookingTotalAmount * (1 - discountPercent / 100);
+                           } else if (discountAmount > 0) {
+                             finalBookingAmount = Math.max(0, bookingTotalAmount - discountAmount);
+                           }
+
+                           revenueByDay[dateStr] += finalBookingAmount; // Суммируем итоговую сумму
+                       }
                    });
+                   // --- Конец пересчета --- 
 
                    const sortedDays = Object.keys(revenueByDay).sort();
 
@@ -2105,7 +2148,7 @@
                            }
                        });
                    } else {
-                       detailsDiv.innerHTML = '<p class="text-xs text-gray-400 italic">Нет данных о выручке по дням.</p>';
+                       detailsDiv.innerHTML = '<p class="text-xs text-gray-400 italic">Нет данных о выручке по дням за выбранный месяц.</p>'; // Уточнено сообщение
                    }
 
                    detailsDiv.classList.remove('hidden');
